# httpweather

./: .gitignore  CMakeLists.txt  README.md  main.cpp  weather.json
html/: index-min.html  index-min.js  index.html  index.js
qtweather/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
